# bcb-ptax-api

./: .gitignore  README.md  main.py  pyproject.toml
data/csvs/: cotacaoTodasAsMoedas_13032026.csv  cotacaoTodasAsMoedas_17032026.csv  cotacaoTodasAsMoedas_18032026.csv  cotacaoTodasAsMoedas_26032026.csv  cotacaoTodasAsMoedas_30032026.csv  cotacaoTodasAsMoedas_31032026.csv
experiments/: test_bcb.py  test_bcb2.py  test_iframe.py  test_iframe2.py  test_iframe3.out  test_iframe3.py  test_scraper.py
src/api/: main.py  routes.py
src/domain/: entities.py  exceptions.py  ports.py
src/infrastructure/: bcb_scraper.py  sqlite_repository.py
src/use_cases/: get_ptax_quotation.py
tests/: test_api_routes.py  test_scraper_parser.py  test_use_cases.py
